--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -6,6 +6,9 @@ root_dir: ${oc.env:PROJECT_ROOT}
 # path to logging directory
 log_dir: ${paths.root_dir}/logs/
 
+# path to data directory
+data_dir: ${paths.root_dir}/data/
+
 # path to output directory, created dynamically by hydra
 # path generation pattern is specified in `configs/hydra/default.yaml`
 # use it to store all files generated during the run, like ckpts and metrics
