--- a/configs/histograms/idpvm_tp.yaml
+++ b/configs/histograms/idpvm_tp.yaml
@@ -13,16 +13,16 @@ canvas:
 
 track_names: "d0, z0, qoverp, z0sin, pt"
 histograms:
-  - histname: ${ex_ctp:"pull", ${histograms.track_names}}
+  - histname: ${ex_ctp:"pull_", ${histograms.track_names}}
     ylim: [[0, 60], [0, 50], [0, 100], [0, 40], [0, 100]]
     xlim: [[-5, 5], [-10, 10], [-0.001, 0.001], [-3, 3], [-10, 10]]
     ratio_ylim: ${gen_list:[0.75, 2], 5}
 
-  - histname: ${ex_ctp:"pull", ${histograms.track_names}}
+  - histname: ${ex_ctp:"pull_", ${histograms.track_names}}
     ylim: [[0, 200], [0, 400], [0, 150], [0, 400], [0, 400]]
     ratio_ylim: ${gen_list:[0.5, 4], 5}
 
-  - histname: ${ex_ctp:"reco", ${histograms.track_names}}
+  - histname: ${ex_ctp:"reco_", ${histograms.track_names}}
     ratio_ylim: ${eval:'[0.75, 2] * 5'}
 
-  - histname: ${ex_ctp:"sigma", ${histograms.track_names}}
+  - histname: ${ex_ctp:"sigma_", ${histograms.track_names}}
