--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -18,4 +18,4 @@ sweep:
 
 sweeper:
   params:
-    histograms: idpvm_efficiencies, idpvm_resolution
+    histograms: idpvm_efficiencies, idpvm_hits, idpvm_resolution, idpvm_tailfrac, idpvm_tp
