--- a/configs/histograms/idpvm_tailfrac.yaml
+++ b/configs/histograms/idpvm_tailfrac.yaml
@@ -16,7 +16,7 @@ canvas:
     y: 0.55
 
 histograms:
-  - histname: ${ex_ctp:"tailfrac_vs_eta_", ${histograms.track_names}}
+  - histname: ${gen_str:"tailfrac_vs_eta_{}", ${histograms.track_names}}
     xlim: ${gen_list:[-4, 4], ${histograms.num_track_names}}
     xlabel: ${gen_list:"#eta^{true}", ${histograms.num_track_names}}
-    ylabel: ${ex_ctp:"Tail Fraction in ", ${histograms.track_latex_names}}
+    ylabel: ${gen_str:"Tail Fraction in {}", ${histograms.track_latex_names}}
