--- a/configs/histograms/rel24_idpvm_hits.yaml
+++ b/configs/histograms/rel24_idpvm_hits.yaml
@@ -1,8 +1,8 @@
 defaults:
-  -  default
+  - default
   - _self_
 
-histo_dir: SquirrelPlots/${histograms.track_dir_name}/Tracks/Selected/
+histo_dir: SquirrelPlots/${histograms.track_dir_name}/Tracks/Selected/HitsOnTracks
 ratio_ylim: [0.8, 1.13]
 canvas:
   atlas_label:
@@ -20,39 +20,33 @@ num_track_names: 5
 track_latex_names: "d_{0}, z_{0}, q/p, z_{0}sin#theta, p_{T}"
 
 histograms:
-# track contents
 
-  - histname: HitsOnTracks/nPixelHits_vs_eta
+  - histname: nPixelHits_vs_eta
     ylabel: "N_{hits, Pixel}"
     ylim: [-0.65, 25]
     ratio_ylim: [0.94, 1.065]
 
-  - histname: HitsOnTracks/nSCTHits_vs_eta
+  - histname: nSCTHits_vs_eta
     ylabel: "N_{hits, Strip}"
     ylim: [-0.65, 25]
 
-  - histname: HitsOnTracks/nPixelHoles_vs_eta
+  - histname: nPixelHoles_vs_eta
     ylabel: "N_{holes, Pixel}"
     ylim: [-0.65, 5]
 
-  - histname: HitsOnTracks/nSCTHoles_vs_eta
+  - histname: nSCTHoles_vs_eta
     ylabel: "N_{holes, Strip}"
     ylim: [-0.001, 2]
 
-  - histname: HitsOnTracks/nSCTDoubleHoles_vs_eta
+  - histname: nSCTDoubleHoles_vs_eta
     ylabel: "N_{double holes, Strip}"
     ylim: [-0.001, 0.25]
 
-  - histname: HitsOnTracks/${gen_str:"nPixel{}",${histograms.hit_props}}
+  - histname: ${gen_str:"nPixel{}",${histograms.hit_props}}
     xlabel: ${gen_str:"N_{{{}, Pixel}}", ${histograms.hit_names}}
     xlim: [[0, 30], [0, 5], [0, 5], [0, 5]]
 
-  - histname: HitsOnTracks/${gen_str:"nSCT{}",${histograms.hit_props}}
+  - histname: ${gen_str:"nSCT{}",${histograms.hit_props}}
     xlabel: ${gen_str:"N_{{{}, Strip}}", ${histograms.hit_names}}
     xlim: [[0, 20], [0, 5], [0, 5], [0, 5]]
     ylim: [[0.2, 1500], null, null, null]
-
-# track parameters
-
-  - histname: Parameters/${gen_str:"reco_{}", ${histograms.track_names}}
-    ratio_ylim: ${gen_list:[0.75, 2], ${histograms.num_track_names}}
