--- a/configs/histograms/rel24_idpvm_resolution.yaml
+++ b/configs/histograms/rel24_idpvm_resolution.yaml
@@ -14,6 +14,8 @@ canvas:
     y: 0.55
 
 track_names: "d0, z0, z0sin, qoverp"
+num_track_names: 4
+
 histograms:
   - histname: ${gen_str:"resolution_vs_eta_{}", ${histograms.track_names}}
     ylim: [[2, 300], [10, 100_000], [0, 1000], [0.008, 5]]
@@ -28,7 +30,7 @@ histograms:
   #   ratio_ylim: ${gen_list:[0.75, 2], ${histograms.num_track_names}}
 
   - histname: ${gen_str:"pull_{}", ${histograms.track_names}}
-    ylim: [[0, 200], [0, 400], [0, 150], [0, 400], [0, 400]]
+    ylim: [[0, 200], [0, 400], [0, 150], [0, 400]]
     ratio_ylim: ${gen_list:[0.5, 4], ${histograms.num_track_names}}
 
   - histname: ${gen_str:"sigma_{}", ${histograms.track_names}}
