--- a/configs/histograms/rel24_idpvm_efficiencies.yaml
+++ b/configs/histograms/rel24_idpvm_efficiencies.yaml
@@ -4,7 +4,7 @@ defaults:
 
 histo_dir: SquirrelPlots/${histograms.track_dir_name}/Tracks/Efficiency
 ylabel: "Track Efficiency"
-ylim: [0.52, 1.01]
+ylim: [0., 1.01]
 ratio_ylim: [0.95, 1.09]
 rebin: 1
 track_names: "eta, pt, d0, z0, R"
