--- a/configs/histograms/rel24_idpvm_hits.yaml
+++ b/configs/histograms/rel24_idpvm_hits.yaml
@@ -23,7 +23,7 @@ histograms:
 
   - histname: nPixelHits_vs_eta
     ylabel: "N_{hits, Pixel}"
-    ylim: [-0.65, 25]
+    ylim: [-0.65, 30]
     ratio_ylim: [0.94, 1.065]
 
   - histname: nSCTHits_vs_eta
@@ -32,7 +32,7 @@ histograms:
 
   - histname: nPixelHoles_vs_eta
     ylabel: "N_{holes, Pixel}"
-    ylim: [-0.65, 5]
+    ylim: [-0.65, 3]
 
   - histname: nSCTHoles_vs_eta
     ylabel: "N_{holes, Strip}"
@@ -40,13 +40,14 @@ histograms:
 
   - histname: nSCTDoubleHoles_vs_eta
     ylabel: "N_{double holes, Strip}"
-    ylim: [-0.001, 0.25]
+    ylim: [-0.001, 0.1]
 
   - histname: ${gen_str:"nPixel{}",${histograms.hit_props}}
     xlabel: ${gen_str:"N_{{{}, Pixel}}", ${histograms.hit_names}}
     xlim: [[0, 30], [0, 5], [0, 5], [0, 5]]
+    # ylim: [[0, 15000], [0, 200_000], [0, 200_000], [0, 200_000]]
 
   - histname: ${gen_str:"nSCT{}",${histograms.hit_props}}
     xlabel: ${gen_str:"N_{{{}, Strip}}", ${histograms.hit_names}}
     xlim: [[0, 20], [0, 5], [0, 5], [0, 5]]
-    ylim: [[0.2, 1500], null, null, null]
+    # ylim: [[0.2, 15000], [0, 200_000], [0, 200_000], [0, 200_000]]
