--- a/configs/histograms/rel24_idpvm_resolution.yaml
+++ b/configs/histograms/rel24_idpvm_resolution.yaml
@@ -25,7 +25,7 @@ histograms:
     ylim: [[0, 400], [10, 2500], [0, 500], [0.008, 0.05]]
 
   - histname: ${gen_str:"pull_{}", ${histograms.track_names}}
-    ylim: [[0, 200], [0, 400], [0, 150], [0, 400]]
     ratio_ylim: ${gen_list:[0.5, 4], ${histograms.num_track_names}}
+    density: ${gen_list:[true], ${histograms.num_track_names}}
 
   - histname: ${gen_str:"sigma_{}", ${histograms.track_names}}
