--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+    "hydra-core",
+    "hydra-colorlog",
+    "hydra-optuna-sweeper",
+    "numpy",
+    "rich",
+    "ruff",
 ]
 
 [project.scripts]
@@ -30,6 +36,22 @@ run_vroot = "vroot.run_vroot:main"
 Documentation = "https://github.com/xju2/root_plot_utils#readme"
 Issues = "https://github.com/xju2/root_plot_utils/issues"
 Source = "https://github.com/xju2/root_plot_utils"
+
+
+[tool.ruff]
+line-length = 100
+preview = false
+lint.select = ["ALL"]
+lint.ignore = [
+    "COM", "D100", "D101", "D102", "D103", "D104", "D105", "D205", "D401", "EM", "FIX", "FBT",
+    "S101", "S404", "S602", "PLR2004", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917",
+    "PLC0415", "G004", "PD901", "N802", "C901", "DTZ005", "DTZ007", "INP", "EXE002", "TD002",
+    "ANN001", "ANN002", "ANN003", "ANN101", "ANN201", "ANN202", "ANN204", "CPY001", "TRY003",
+    "N803", "N806", "N812", "T201", "PLW1514", "PTH123", "RUF015", "RUF017", "PLR6301", "ERA", "ISC001",
+    "RET504", "SLF001", "S403", "PLR1702", "TCH003", "S105", "TD003", "PLR0904", "ARG002",
+    "D203", "D213", "D107", "S301"
+]
+extend-exclude = ["*.ipynb"]
 
 [tool.hatch.version]
 path = "src/vroot/__about__.py"
