--- a/src/vroot/configs/histograms/rel24_idpvm_efficiencies.yaml
+++ b/src/vroot/configs/histograms/rel24_idpvm_efficiencies.yaml
@@ -1,5 +1,5 @@
 defaults:
-  -  default
+  - default
   - _self_
 
 histo_dir: SquirrelPlots/${histograms.track_dir_name}/Tracks/Efficiency
@@ -8,6 +8,8 @@ ylim: [0., 1.01]
 ratio_ylim: [0.95, 1.09]
 rebin: 1
 track_names: "eta, pt, d0, z0, R"
+num_track_names: 5
 histograms:
   - histname: ${gen_str:"efficiency_vs_{}", ${histograms.track_names}}
     xlim: [[-4, 4], [0, 20], [-5, 5], [-150, 150], [0, 30]]
+    ylim: ${gen_list:[0.9, 1.01], ${histograms.num_track_names}}
