--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "hydra-optuna-sweeper",
     "numpy",
     "rich",
+    "ruff (>=0.11.10,<0.12.0)",
 ]
 
 [project.scripts]
@@ -33,7 +34,6 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "~=3.7.1"
-ruff = "~=0.9.7"
 pytest = "~=8.2.1"
 pytest-cov = "~=5.0.0"
 
