--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "numpy",
     "rich",
     "ruff (>=0.11.10,<0.12.0)",
+    "pre-commit (>=4.2.0,<5.0.0)",
 ]
 
 [project.scripts]
@@ -33,7 +34,6 @@ Source = "https://github.com/xju2/root_plot_utils"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "~=3.7.1"
 pytest = "~=8.2.1"
 pytest-cov = "~=5.0.0"
 
@@ -54,7 +54,7 @@ lint.ignore = [
     "F401", "E501", "PD901", "C901", "I001", "COM", "EM", "FIX", "FBT", "G004",
     "N802", "N803", "N806", "N812", "T201", "PTH123", "RUF015", "RUF017", "ERA", "ISC001",
     "RET504", "SLF001", "TD003", "ARG002", "N999", "TRY201", "TRY003", "ANN204", "ANN202",
-    "ANN001", "ANN201", "ANN003",
+    "ANN001", "ANN201", "ANN003", "CPY001", "TCH002"
 ]
 exclude = ["*.ipynb"]
 
