--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ lint.ignore = [
     "F401", "E501", "PD901", "C901", "I001", "COM", "EM", "FIX", "FBT", "G004",
     "N802", "N803", "N806", "N812", "T201", "PTH123", "RUF015", "RUF017", "ERA", "ISC001",
     "RET504", "SLF001", "TD003", "ARG002", "N999", "TRY201", "TRY003", "ANN204", "ANN202",
-    "ANN001", "ANN201", "ANN003", "CPY001", "TCH002"
+    "ANN001", "ANN201", "ANN003", "CPY001", "TCH002", "DOC501",
 ]
 exclude = ["*.ipynb"]
 
