--- a/src/vroot/configs/histograms/rel24_idpvm_hits.yaml
+++ b/src/vroot/configs/histograms/rel24_idpvm_hits.yaml
@@ -20,27 +20,34 @@ num_track_names: 5
 track_latex_names: "d_{0}, z_{0}, q/p, z_{0}sin#theta, p_{T}"
 
 histograms:
-
   - histname: nPixelHits_vs_eta
     ylabel: "N_{hits, Pixel}"
-    ylim: [-0.65, 30]
+    ylim: [-0.001, 30]
     ratio_ylim: [0.94, 1.065]
-
-  - histname: nSCTHits_vs_eta
-    ylabel: "N_{hits, Strip}"
-    ylim: [-0.65, 25]
 
   - histname: nPixelHoles_vs_eta
     ylabel: "N_{holes, Pixel}"
-    ylim: [-0.65, 3]
+    ylim: [-0.001, 2]
+
+  - histname: nPixelOutliers_vs_eta
+    ylabel: "N_{outliers, Pixel}"
+    ylim: [-0.001, 2]
+
+  - histname: nSCTHits_vs_eta
+    ylabel: "N_{hits, Strip}"
+    ylim: [-0.001, 25]
 
   - histname: nSCTHoles_vs_eta
     ylabel: "N_{holes, Strip}"
     ylim: [-0.001, 2]
 
+  - histname: nSCTOutliers_vs_eta
+    ylabel: "N_{outliers, Strip}"
+    ylim: [-0.001, 2]
+
   - histname: nSCTDoubleHoles_vs_eta
     ylabel: "N_{double holes, Strip}"
-    ylim: [-0.001, 0.1]
+    ylim: [-0.001, 0.15]
 
   - histname: ${gen_str:"nPixel{}",${histograms.hit_props}}
     xlabel: ${gen_str:"N_{{{}, Pixel}}", ${histograms.hit_names}}
