--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,6 @@ dependencies = [
     "hydra-colorlog",
     "hydra-optuna-sweeper",
     "numpy",
-    "rich",
-    "ruff (>=0.11.10,<0.12.0)",
-    "pre-commit (>=4.2.0,<5.0.0)",
 ]
 
 [project.scripts]
@@ -36,6 +33,8 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 pytest = "~=8.2.1"
 pytest-cov = "~=5.0.0"
+ruff =  ">=0.11.10,<0.12.0"
+pre-commit = ">=4.2.0,<5.0.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.6.1"
